--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <td><button class="btn" id="btn-right" class="btn" onclick="calculate()">=</button></td>
                 </tr>
             </table>
-            <figure>
+            <figure class="portifolio-btn">
                 <a href="https://kaiobrunobm.github.io/portfolio/"><i class='bx bx-left-arrow-alt bx-fade-left-hover back-btn' ></i></a>
                 <figcaption class="back-btn-caption">Portfolio</figcaption>
             </figure>
