Translate and margin adjusts
Update the JS page multilang to the IOS calculator page, and adding margin to the footer text.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- MAIN CONTENT -->
         <main>
-            <h1>IOS Calculator replica</h1>
+            <h1 class="main-title">IOS Calculator replica</h1>
             <section class="iphone">
                 <div class="calculator-btn">
                     <p id="result"></p>
